--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="bottom-wrapper">
         <fieldset>
-            <legend>Se quiser adicionar os calendarios manualmente:</legend>
+            <legend>Links para adicionar os calendarios à sua aplicaçao de agenda:</legend>
             <div>
                 <div id="sports_div">
                 </div>
